# BrainBot

./: Makefile.am  README.md  configure.ac  gen_makefile.sh
src/: main.cpp
src/core/: robot.cpp  robot.h
src/logic/: brain.cpp  brain.h
src/logic/AI-1/: neuron.h  reflexsystem.cpp  reflexsystem.h
