AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = BrainBot
BrainBot_SOURCES = src/main.cpp src/logic/brain.cpp src/logic/brain.h \
                src/core/robot.h src/core/robot.cpp src/logic/AI-1/*.h \
                src/logic/AI-1/*.cpp

#                dist_noinst_SCRIPTS = autogen.sh
